Fix Article functionality, animations, and stretch

--- a/Article/Article.less
+++ b/Article/Article.less
@@ -8,9 +8,10 @@
   border-radius: 10px;
   background-color: white;
   position: relative;
-  height: 50px;
+  max-height: 50px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
+  transition: max-height 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 
   h2 {
     font-size: 28px;
@@ -38,11 +39,34 @@
     cursor: pointer;
     transform: translate(-50%);
     background-color: white;
+    padding: 5px;
+
+    &:hover {
+      opacity: 0.6;
+    }
+  }
+
+  .closeButton {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 10px;
+    color: darkred;
+    cursor: pointer;
+
+    &:hover {
+      color: red;
+    }
   }
 }
 
 .article-open {
-  height: 400px;
+  height: auto;
+  max-height: 400px;
+}
+
+.article-closed {
+  display: none;
 }
 
 
